[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# math for geometry processing
nalgebra = "0.32"
# point cloud / lidar formats
las = "0.8"
# image I/O
image = "0.25"
# mesh ops, optional
tri-mesh = "0.6"
# serialization (optional)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"

[lib]
name = "engine"
path = "src/lib.rs"
